--- a/platform-admin/src/main/webapp/index.html
+++ b/platform-admin/src/main/webapp/index.html
@@ -120,7 +120,7 @@
                     data-id="main" seamless></iframe>
         </div>
         <div class="footer">
-            2018~2023 &copy; <a href="http://fly2you.cn" target="_blank">安徽微同科技有限公司</a>
+            2018~2023 &copy; <a href="http://fly2you.cn" target="_blank">深圳妙趣坊贸易有限公司</a>
         </div>
     </div>
     <!--右侧部分结束-->
