完成登录功能

--- a/platform-admin/src/main/webapp/index.html
+++ b/platform-admin/src/main/webapp/index.html
@@ -45,7 +45,7 @@
                 <li class="nav-header">
                     <div class="dropdown profile-element"
                          style="text-align: center;font-size: 18px;font-weight: 600;color: white;">
-                        妙趣坊商城管理平台
+                        妙趣坊管理平台
                     </div>
                     <div class="logo-element">妙趣坊
                     </div>
