商城新增邮箱登录

--- a/platform-admin/src/main/webapp/login.html
+++ b/platform-admin/src/main/webapp/login.html
@@ -43,8 +43,14 @@
                 <div class="m-b"></div>
                 <h4>欢迎使用 <strong>妙趣坊商城管理平台</strong></h4>
                 <ul class="m-b">
-                    <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 测试</li>
-                    <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 测试</li>
+                    <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 电话:19076194847</li>
+                    <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 微信:MiaoQuF</li>
+                    <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i>
+                        <a href="https://work.weixin.qq.com/kfid/kfce9524b2cf9333141" target="_blank">点击咨询客服</a>
+                    </li>
+                    <li><i class="fa fa-arrow-circle-o-right m-r-xs">
+                        </i> <a href="http://localhost:8081/h5/#/pages/auth/login/login" target="_blank">点击进入妙趣坊商城</a>
+                    </li>
                 </ul>
             </div>
         </div>
