修复填写Topic界面bug

--- a/platform-admin/src/main/webapp/login.html
+++ b/platform-admin/src/main/webapp/login.html
@@ -97,8 +97,8 @@
     var vm = new Vue({
         el: '#loginBox',
         data: {
-            username: 'admin',
-            password: 'admin',
+            username: '',
+            password: '',
             captcha: '',
             src: 'captcha.jpg'
         },
