--- a/platform-admin/src/main/webapp/index.html
+++ b/platform-admin/src/main/webapp/index.html
@@ -96,7 +96,7 @@
             </button>
             <nav class="page-tabs J_menuTabs">
                 <div class="page-tabs-content">
-                    <a href="javascript:;" class="active J_menuTab" data-id="main">首页</a>
+                    <a href="javascript:;" class="active J_menuTab" data-id="main">加盟商利润表</a>
                 </div>
             </nav>
             <button class="roll-nav roll-right J_tabRight"><i class="fa fa-forward"></i>
